# wire

./: Cargo.toml  KNOWLEDGE.md  README.md  parse_ch.py  server_secret.py
brass-aphid-wire/: Cargo.toml  build.rs
brass-aphid-wire-decryption/: Cargo.toml  README.md
brass-aphid-wire-decryption/src/: key_log.rs  lib.rs  offline.rs  prefixed_list.rs
brass-aphid-wire-decryption/src/decryption/: key_manager.rs  key_space.rs  mod.rs  s2n_tls_intercept.rs  stream_decrypter.rs  tls_stream.rs  transcript.rs
brass-aphid-wire-decryption/src/testing/: hello_retry.rs  key_update.rs  messages_across_records.rs  mod.rs  openssl_decrypted_transcript.rs  plaintext_alert_during_handshake.rs  rustls_decrypted_transcript.rs  s2n_decrypted_transcript.rs  utilities.rs
brass-aphid-wire-macros/: Cargo.toml  README.md
brass-aphid-wire-macros/src/: lib.rs
brass-aphid-wire-messages/: AwsDefault.client_hello  Cargo.toml  CdoClientApproved.client_hello  README.md  RetailExternal.client_hello  apache.client_hello  netty_LegacyClient.client_hello  netty_LegacyStrictSsl.client_hello  netty_RetailHwlb.client_hello  netty_RetailInternal.client_hello  netty_RetailSubsidiary.client_hello
brass-aphid-wire-messages/fuzz/: Cargo.toml
brass-aphid-wire-messages/fuzz/fuzz_targets/: client_hello.rs  psk.rs
brass-aphid-wire-messages/resources/: openssl_to_iana.html
brass-aphid-wire-messages/resources/iana/: tls-signaturescheme.csv
brass-aphid-wire-messages/src/: codec.rs  lib.rs
brass-aphid-wire-messages/src/iana/: mod.rs
brass-aphid-wire-messages/src/protocol/: content_value.rs  extensions.rs
brass-aphid-wire-messages/src/protocol/messages/: members.rs  mod.rs
brass-aphid-wire-messages/src/testing/: mod.rs  other_client_hellos.rs  s2n_encrypted_transcripts.rs  s2n_tls_intercept.rs  transcript.rs  utilities.rs
brass-aphid-wire-messages/tests/: rfc8448.rs
brass-aphid-wire/certs/: readme.md
brass-aphid-wire/certs/cert_server_auth/: intermediate-cert-code-signing.pem  intermediate-cert-server-auth.pem  leaf-cert-code-signing.pem  leaf-cert.pem
brass-aphid-wire/fuzz/: Cargo.toml  README.md
brass-aphid-wire/fuzz/fuzz_targets/: client_hello.rs  psk.rs
brass-aphid-wire/resources/iana/: tls-parameters-8.csv  tls-signaturescheme.csv
brass-aphid-wire/src/: codec.rs  key_log.rs  lib.rs  offline.rs  prefixed_list.rs  stream_decrypter.rs
brass-aphid-wire/src/decryption/: key_manager.rs  key_space.rs  mod.rs  s2n_tls_intercept.rs  stream_decrypter.rs  tls_stream.rs  transcript.rs
brass-aphid-wire/src/iana/: constants.rs  definitions.rs  mod.rs
brass-aphid-wire/src/protocol/: content_value.rs  extensions.rs  mod.rs
brass-aphid-wire/src/protocol/messages/: members.rs  mod.rs
brass-aphid-wire/src/testing/: hello_retry.rs  key_update.rs  messages_across_records.rs  mod.rs  openssl_decrypted_transcript.rs  rustls_decrypted_transcript.rs  s2n_decrypted_transcript.rs  s2n_tls_transcripts.rs  stutter.rs  utilities.rs
brass-aphid-wire/tests/: rfc8448.rs
capability-compendium/: Cargo.toml  README.md
certs/negative_server_intent_certs/leaf/: server-key.pem
go-tls-transcript/: README.md  all_go_transcripts.sh  go.mod  recording_pipe.go  specific_go_transcript.sh  tls_transcript.go  tls_transcript_test.go
java-tls-transcript/: JavaTlsTranscript.java  README.md  RecordingPipe.java  TranscriptDumper.java  Transmission.java  all_java_transcripts.sh  session_resumption_probability.py
java-tls-transcript/src/main/java/: ClientHelloGenerator.java
openssl-tls-transcript/: CMakeLists.txt  README.md  TODO  client_hello.c  generate_all.sh
