[package]
name = "brass-aphid-wire-decryption"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "utilities to do runtime decryption of TLS conversations, and helpers for popular TLS libraries"

[dependencies]
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.12.0"

tracing-appender = "0.2"
tracing-subscriber = "0.3" 
tracing = "0.1.40"

strum = { version = "0.25", features = ["derive"] }

# Internal dependencies
brass-aphid-wire-macros = { path = "../brass-aphid-wire-macros" }
brass-aphid-wire-messages = { path = "../brass-aphid-wire-messages" }
anyhow = "1.0.98"
errno = "0.3"
libc = "0.2.174"
aws-lc-rs = "1.0.0"
hex = "0.4.3"
openssl = {version = "0.10.73", features = ["vendored"]}
# s2n-tls = {version = "0.3.21", features = ["unstable-testing"]}
# s2n-tls-sys = "0.3.21"

s2n-tls = { version = "0.3.21", path = "/home/ubuntu/workspace/s2n-tls/bindings/rust/extended/s2n-tls", features = ["unstable-testing"]}
s2n-tls-sys = { version = "0.3.21", path = "/home/ubuntu/workspace/s2n-tls/bindings/rust/extended/s2n-tls-sys"}

rustls = "0.23.29"
openssl-sys = "0.9.109"
sha2 = "0.10.9"
hkdf = "0.12.4"

[build-dependencies]
serde_with = "3.12.0"
