[package]
name = "brass-aphid-wire-messages"
version.workspace = true
edition.workspace = true

[dependencies]
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.12.0"

tracing-appender = "0.2"
tracing-subscriber = "0.3" 
tracing = "0.1.40"

strum = { version = "0.25", features = ["derive"] }

# Internal dependencies
brass-aphid-wire-macros = { path = "../brass-aphid-wire-macros" }
anyhow = "1.0.98"
errno = "0.3"
libc = "0.2.174"
hex = "0.4.3"

[build-dependencies]
serde_with = "3.12.0"

[dev-dependencies]
s2n-tls = {version = "0.3.21", features = ["unstable-testing"]}
s2n-tls-sys = "0.3.21"
