[package]
name = "brass-aphid-wire-messages"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "structs and constants for TLS message and IANA constants"

[dependencies]
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.12.0"

tracing-appender = "0.2"
tracing-subscriber = "0.3" 
tracing = "0.1.40"

strum = { version = "0.25", features = ["derive"] }

# Internal dependencies
brass-aphid-wire-macros = { version = "0.0.2", path = "../brass-aphid-wire-macros" }
anyhow = "1.0.98"
hex = "0.4.3"

[build-dependencies]
serde_with = "3.12.0"

[dev-dependencies]
libc = "0.2.174"
errno = "0.3"
s2n-tls = { version = "0.3.21", path = "/home/ubuntu/workspace/s2n-tls/bindings/rust/extended/s2n-tls", features = ["unstable-testing"]}
s2n-tls-sys = { version = "0.3.21", path = "/home/ubuntu/workspace/s2n-tls/bindings/rust/extended/s2n-tls-sys"}

