[package]
name = "brass-aphid-wire"
version.workspace = true
edition.workspace = true

[dependencies]
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "3.12.0"

tracing-appender = "0.2"
tracing-subscriber = "0.3"
tracing = "0.1.40"

strum = { version = "0.25", features = ["derive"] }

# Internal dependencies
brass-aphid-wire-macros = { path = "../brass-aphid-wire-macros" }
anyhow = "1.0.98"
s2n-tls-sys = "0.3.21"
errno = "0.3.13"
libc = "0.2.174"
aws-lc-rs = "1.0.0"
hex = "0.4.3"
s2n-tls = {version = "0.3", features = ["unstable-testing"]}

[build-dependencies]
serde_with = "3.12.0"

[dev-dependencies]
