[package]
name = "brass-aphid-wire-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.brass-aphid-wire-messages]
path = ".."

[[bin]]
name = "client_hello"
path = "fuzz_targets/client_hello.rs"
test = false
doc = false
bench = false

[[bin]]
name = "psk"
path = "fuzz_targets/psk.rs"
test = false
doc = false
bench = false
